September 16, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/pt_BR.po, po/pt_BR.gmo: Added Portuguese (Brazil) translation. Thanks
   to Tibério Vítor <tvtoon at gmail dot com>.
 * po/LINGUAS: Added pt_BR.po.
 * po/pcsx.pot: Updated.

September 15, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * debian/changelog: Bumped version.

September 12, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Disregard the synchronization information and header
   data when playing CDDA music.

September 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/ConfigurePlugins.c: Select a real BIOS instead of the Internal
   HLE BIOS by default at the first run.
 * gui/Gtk2Gui.c: Likewise.
 * gui/LnxMain.c: Scan BIOSes in certain system-wide directories and place
   symlinks in ~/.pcsx/bios.
 * gui/Makefile.am, gui/Makefile.in: Added PSEMU_DATA_DIR.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po: Updated.

September 7, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/alsa.c: Removed ALSA-specific CDDA stuff, which causes
   problems with some versions of PulseAudio.
 * plugins/dfsound/spu.c: Implemented CDDA support in a more "general" way.
 * plugins/dfsound/xa.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.
 * plugins/dfsound/spu.h: Likewise.
 * plugins/dfsound/xa.h: Likewise.
 * plugins/dfsound/cfg.c: Removed NOTHREADLIB.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/stdafx.h: Likewise.
 * libpcsxcore/cdriso.c: Reverted to the method which feeds the CDDA data to
   the SPU plugin at an interval instead of continuously, otherwise it's still
   broken with spuEternal in SPUasync mode.

September 6, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfsound/spu.c: Fixed frequency modulation emulation. Handle IRQs
   in the decoded sound buffer areas. (sync'ed from the P.E.Op.S SPU 1.09)
 * plugins/dfsound/dma.c: Likewise.
 * plugins/dfsound/registers.c: Likewise.
 * plugins/dfsound/xa.c: Likewise.
 * plugins/dfsound/externals.h: Likewise.
